plugins {
    id 'java'
    id 'application'
}

sourceCompatibility = JavaVersion.VERSION_17

group 'org.example'
version '1.0-SNAPSHOT'

mainClassName = "app.Main"


repositories {
    mavenCentral()
}

dependencies {
    // Testing
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'

    testImplementation 'org.junit.platform:junit-platform-suite-api:1.8.2'
    testRuntimeOnly 'org.junit.platform:junit-platform-suite-engine:1.8.2'

    // Lombok
    compileOnly 'org.projectlombok:lombok:1.18.22'
    annotationProcessor 'org.projectlombok:lombok:1.18.22'

    //Mockito
    testCompileOnly 'org.projectlombok:lombok:1.18.22'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.22'

    testImplementation "org.mockito:mockito-core:3.+"
}

test {
    useJUnitPlatform()
}